--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,6 +6,13 @@
   </ion-header>
 
   <ion-content>
+
+    <ion-avatar text-center class="hide-card">
+      <img src="http://placehold.it/300x200" class="image"/>
+      <!--<h3>{{manager.username}}</h3>-->
+    <hr>
+    </ion-avatar>
+
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
@@ -14,6 +21,9 @@
   </ion-content>
 
 </ion-menu>
+
+
+
 
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
 <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
