--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -19,6 +19,25 @@
   core     	md 	Any platform that doesn’t fit any of the above platforms will use the Material Design styles.
  */
 
+.image {
+  height: 5vw;
+  width: 5vw;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  box-shadow: 0 0 5px gray;
+  display: inline-block;
+  margin-top: 2vw;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.circle-pic{
+  width:50px;
+  height:50px;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+}
+
 .ios, .md, .wp {
 
   h1 {
