--- a/src/pages/report-details/report-details.scss
+++ b/src/pages/report-details/report-details.scss
@@ -1,3 +1,18 @@
 page-report-details {
 
+  .image-view{
+    height: 166px;
+    width: 278px;
+    object-fit: contain;
+  }
+
+  .image-card{
+    width: 278px;
+  }
+
+  .file-name{
+    color: #4D6EFF ;
+    font-size: small;
+  }
+
 }
