adding action sheet on imag

--- a/src/pages/report-details/report-details.scss
+++ b/src/pages/report-details/report-details.scss
@@ -11,8 +11,11 @@ page-report-details {
   }
 
   .file-name{
-    color: #4D6EFF ;
     font-size: small;
+  }
+
+  .view-action{
+    color: #4D6EFF ;
   }
 
 }
